--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -15,9 +15,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      
       - uses: jamesgeorge007/github-activity-readme@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          # Explicitly set your username to force detection
+          gh_username: Sani-Mohibur
           COMMIT_MSG: '⚡ Update recent activity'
           MAX_LINES: 5
+          COMMIT_NAME: GitHub Actions Bot
+          COMMIT_EMAIL: action@github.com
