--- a/.github/workflows/profile-summary.yml
+++ b/.github/workflows/profile-summary.yml
@@ -2,8 +2,8 @@ name: Update Streak Chart
 
 on:
   schedule:
-    - cron: "0 */4 * * *" # Runs every 4 hours
-  workflow_dispatch: # Allows manual trigger
+    - cron: "0 */4 * * *"
+  workflow_dispatch:
 
 jobs:
   update-streak:
@@ -14,8 +14,8 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Download Streak Image
-        # Downloads your specific streak chart and saves it as 'streak.svg'
-        uses: DenverCoder1/github-readme-streak-stats-action@v3
+        # Corrected the link below (removed "-action")
+        uses: DenverCoder1/github-readme-streak-stats@v3
         with:
           github_username: ${{ github.repository_owner }}
           output_path: streak.svg
@@ -28,6 +28,5 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add streak.svg
-          # Only commit if the file has changed
           git commit -m "Update streak chart" || exit 0
           git push
