--- a/.github/workflows/profile-summary.yml
+++ b/.github/workflows/profile-summary.yml
@@ -34,7 +34,7 @@ jobs:
           curl -L -f \
             -H "Authorization: token $TOKEN" \
             -o $TMP_FILE \
-            "https://streak-stats.demolab.com?user=Sani-Mohibur&theme=transparent&hide_border=true" || echo "Download failed, keeping old streak.svg"
+            "https://streak-stats.vercel.app?user=Sani-Mohibur&theme=transparent&hide_border=true" || echo "Download failed, keeping old streak.svg"
 
           # If the file exists and is non-empty, move it to streak.svg
           if [ -s $TMP_FILE ]; then
